The hover effect works on all and any sized grid square. Added a button with an event listener, which prompts the user to enter a number from 4 - 100, which changes the size of the grid. Through testing, I have found that after once or twice of changing the size, the website would get stuck on prompting the user to enter a number. In order to escape this, I have needed to repeatedly press either cancel or enter until the prompt disapeared and the size would change. I will attempt to figure out a fix for it. I also cleaned up the code on JavaScript, and removed the onload function for the window

--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,20 @@
 * {
     box-sizing: border-box;
+    overflow: hidden;
 }
 
 body {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    margin: 50px;
+    margin: 75px;
+}
+
+button {
+    width: 80px;
+    height: 60px;
+    border-radius: 10px;
+    font-size: 20px;
 }
 
 #container {
